--- a/account.html
+++ b/account.html
@@ -39,7 +39,7 @@
                         <a class="nav-link text-dark" href="#">Who we are</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link text-dark " href="/singup.html"><span
+                        <a class="nav-link text-dark " href="/dashboad.html"><span
                                 class="nz-btn-gold py-0 my-2 px-2">Account</span></a>
                     </li>
                     <li class="nav-item mx-3">
@@ -70,51 +70,17 @@
                     <a href="dashboad.html"
                         class="list-group-item text-center py-4 my-3 list-group-item-action">Dashboard</a>
                     <a href="services.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action active">Services</a>
+                        class="list-group-item text-center py-4 my-3 list-group-item-action">Services</a>
                     <a href="orders.html"
                         class="list-group-item text-center py-4 my-3 list-group-item-action">Orders</a>
                     <a href="finance.html"
                         class="list-group-item text-center py-4 my-3 list-group-item-action">Finaice</a>
                     <a href="account.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action">Account</a>
+                        class="list-group-item text-center py-4 my-3 list-group-item-action active">Account</a>
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow py-3">
-                <div class="tab-content" id="v-pills-tabContent">
-                    <div class="tab-pane fade" id="v-pills-dashboard" role="tabpanel"
-                        aria-labelledby="v-pills-dashboard-tab">
-
-                    </div>
-                    <div class="tab-pane fade show active" id="v-pills-services" role="tabpanel"
-                        aria-labelledby="v-pills-services-tab">
-                        <h1 class="section-title-side"><span>Translation - <span class="font-weight-light">Easy
-                                    Mode</span></h1>
-                        <form>
-                            <div class="form-group">
-                                <div class="custom-file">
-                                    <input type="file" class="custom-file-input" id="customFile">
-                                    <label class="custom-file-label" for="customFile">Choose file</label>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleFormControlTextarea1">Special Instructions </label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                            </div>
-                            <a href="/placeOrderSuccess.html"
-                                class="btn nz-btn-gold text-uppercase font-weight-bold">Place
-                                Order</a>
-                        </form>
-
-                    </div>
-                    <div class="tab-pane fade" id="v-pills-orders" role="tabpanel" aria-labelledby="v-pills-orders-tab">
-                        orders</div>
-                    <div class="tab-pane fade" id="v-pills-finaice" role="tabpanel"
-                        aria-labelledby="v-pills-finaice-tab">
-                        finaice</div>
-                    <div class="tab-pane fade" id="v-pills-account" role="tabpanel"
-                        aria-labelledby="v-pills-account-tab">
-                        account</div>
-                </div>
+                <h1 class="section-title-side"><span>Place order now</span></h1>
             </div>
         </div>
     </section>
