--- a/blank.html
+++ b/blank.html
@@ -39,7 +39,7 @@
                         <a class="nav-link text-dark" href="#">Who we are</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link text-dark " href="/singup.html"><span
+                        <a class="nav-link text-dark " href="/dashboad.html"><span
                                 class="nz-btn-gold py-0 my-2 px-2">Account</span></a>
                     </li>
                     <li class="nav-item mx-3">
@@ -67,42 +67,20 @@
         <div class="row">
             <div class="col-12 col-lg-2 flex-sm-row overflow-auto">
                 <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
-                    <a href="dashboad.html" class="list-group-item text-center py-4 my-3 list-group-item-action"
-                        id="v-pills-dashboard-tab" data-toggle="pill" href="#v-pills-dashboard" role="tab"
-                        aria-controls="v-pills-dashboard" aria-selected="false">Dashboard</a>
-                    <a href="services.html" class="list-group-item text-center py-4 my-3 list-group-item-action active"
-                        id="v-pills-services-tab" data-toggle="pill" href="#v-pills-services" role="tab"
-                        aria-controls="v-pills-services" aria-selected="true">Services</a>
-                    <a href="orders.html" class="list-group-item text-center py-4 my-3 list-group-item-action"
-                        id="v-pills-orders-tab" data-toggle="pill" href="#v-pills-orders" role="tab"
-                        aria-controls="v-pills-orders" aria-selected="false">Orders</a>
-                    <a href="finance.html" class="list-group-item text-center py-4 my-3 list-group-item-action"
-                        id="v-pills-finaice-tab" data-toggle="pill" href="#v-pills-finaice" role="tab"
-                        aria-controls="v-pills-finaice" aria-selected="false">Finaice</a>
-                    <a href="account.html" class="list-group-item text-center py-4 my-3 list-group-item-action"
-                        id="v-pills-account-tab" data-toggle="pill" href="#v-pills-account" role="tab"
-                        aria-controls="v-pills-account" aria-selected="false">Account</a>
+                    <a href="dashboad.html"
+                        class="list-group-item text-center py-4 my-3 list-group-item-action">Dashboard</a>
+                    <a href="services.html"
+                        class="list-group-item text-center py-4 my-3 list-group-item-action active">Services</a>
+                    <a href="orders.html"
+                        class="list-group-item text-center py-4 my-3 list-group-item-action">Orders</a>
+                    <a href="finance.html"
+                        class="list-group-item text-center py-4 my-3 list-group-item-action">Finaice</a>
+                    <a href="account.html"
+                        class="list-group-item text-center py-4 my-3 list-group-item-action">Account</a>
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow py-3">
-                <div class="tab-content" id="v-pills-tabContent">
-                    <div class="tab-pane fade" id="v-pills-dashboard" role="tabpanel"
-                        aria-labelledby="v-pills-dashboard-tab">
-
-                    </div>
-                    <div class="tab-pane fade show active" id="v-pills-services" role="tabpanel"
-                        aria-labelledby="v-pills-services-tab">
-                        <h1 class="section-title-side"><span>Place order now</span></h1>
-                    </div>
-                    <div class="tab-pane fade" id="v-pills-orders" role="tabpanel" aria-labelledby="v-pills-orders-tab">
-                        orders</div>
-                    <div class="tab-pane fade" id="v-pills-finaice" role="tabpanel"
-                        aria-labelledby="v-pills-finaice-tab">
-                        finaice</div>
-                    <div class="tab-pane fade" id="v-pills-account" role="tabpanel"
-                        aria-labelledby="v-pills-account-tab">
-                        account</div>
-                </div>
+                <h1 class="section-title-side"><span>Place order now</span></h1>
             </div>
         </div>
     </section>
